--- a/.github/workflows/dump_baserow.yml
+++ b/.github/workflows/dump_baserow.yml
@@ -22,6 +22,7 @@ jobs:
       - name: dump the data
         run: |
           python dump_data.py
+          python download_zotero.py
       - name: data dump to xml
         run: |
           python json2xml.py
