--- a/.github/workflows/enrich_baserow.yml
+++ b/.github/workflows/enrich_baserow.yml
@@ -17,10 +17,11 @@ jobs:
         uses: actions/checkout@v3
       - name: Install Python Packages
         run: |
-          pip install -r requirements.txt
+          pip install -U pip
+          pip install -r scripts/python/requirements.txt
       - name: enrich data uri
         run: |
-          python enrich_data.py
+          python scripts/python/enrich_data.py
       - name: enrich data location
         run: |
-          python geonames.py
+          python scripts/python/geonames.py
