--- a/.github/workflows/dump_baserow.yml
+++ b/.github/workflows/dump_baserow.yml
@@ -29,6 +29,7 @@ jobs:
       - name: data dump to xml
         run: |
           python scripts/python/json2xml.py
+          python scripts/python/birth_death_dates.py
       - name: create pmb beacon
         run: |
           python scripts/python/pmb-beacon-generator.py
